Cleaned up code snippets and other minor changes'

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -36,6 +36,7 @@
 			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
+			<li><a href="/about">About</a></li>
 		</ul>
 	</div>
 	</div>
