--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -9,7 +9,7 @@
 
 </div>
 
-<table class="table table-bordered table-striped" ng-show="user.users">
+<table class="table table-bordered table-striped">
 	<thead>
 		<tr>
 			<th>_id</th>
@@ -24,7 +24,6 @@
 			<td>{{ person.name }}</td>
 			<td>{{ person.username }}</td>
 			<td class="col-sm-2">
-				<a href="#" ng-click="user.deleteUser(person._id)" class="btn btn-primary">Delete</a>
 			</td>
 		</tr>
 	</tbody>
